@@ -1,3 +1,7 @@
+2009-04-01  Kurt Maute	<kurt@maute.us>
+	* src/planner-format.c:
+	Add minutes to duration format
+
 2009-03-21  Maurice van der Pot  <griffon26@kfk4ever.com>
 
 	* docs/user-guide/C/planner.xml:
